--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
     height: 35px;
     width: 80px;
     background-color: red;
+    border: red;
     color: white;
     font-weight: 700;
     font-size: large;
